# alacritty-styles

./: README.md  pyproject.toml
alacritty_styles/: colorscheme.py  main.py
